[package]
name = "gameboy_rs"
version = "0.1.0"
authors = ["Ruben <chickenzrage@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
sdl2 = { version = "0.34.0", features = ["bundled", "static-link"] }
imgui = "0.7.0"
imgui-sdl2 = "0.14.0"
gl = "0.14.0"
imgui-opengl-renderer = "0.11"
nfd2 = "0.3.0"

[profile.test]
opt-level = 3

[profile.dev]
debug = true
incremental = true